[project]
name = "astro"
version = "0.1.0"
description = "simple script to stay in touch with the space"
authors = [
    {name = "Pavel Dusek",email = "pavel.dusek@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
